Fix for broken layout in Opera.

--- a/sass/grids.sass
+++ b/sass/grids.sass
@@ -75,8 +75,11 @@
   display: table-cell
   *display: block
   *zoom: 1
-  float: none
   _position: relative
   _left: -3px
   _margin-right: -3px
+
+
+*[class|=lastUnit]
+  float: none
   width: auto
